Fix misalignment of background for actor sheet tab headers

--- a/css/herosystem6e.css
+++ b/css/herosystem6e.css
@@ -30,9 +30,6 @@
   justify-content: space-between;
 }
 
-/* ----------------------------------------- */
-/*  Flexbox                                  */
-/* ----------------------------------------- */
 .flexrow {
   display: flex;
   flex-direction: row;
@@ -463,7 +460,6 @@ form .upload-button {
   border-radius: 2px;
   text-align: left;
   font-weight: bold;
-  height: 26px;
   z-index: 1;
 }
 .hero .tab-header .item-image {
