--- a/scss/components/_tabs.scss
+++ b/scss/components/_tabs.scss
@@ -15,7 +15,6 @@
     border-radius: 2px;
     text-align: left;
     font-weight: bold;
-    height: 26px;
     z-index: 1;
 
     .item-image {
